# jambda

./: Gemfile  LICENSE  README.md
haskell/: .gitignore  LICENSE  README.md  jambda.cabal  stack.yaml
haskell/app/: Main.hs
haskell/src/: Main.hs
haskell/src/Jambda/: Core.hs  Env.hs  Evaluator.hs  Reader.hs  Types.hs
lib/: jambda.rb
lib/jambda/: core.rb  eval.rb  list.rb  reader.rb  repl.rb  special_forms.rb  stdlib.lisp  trace.rb  util.rb
ruby/: Gemfile
ruby/lib/jambda/: backtrace_filter.rb  core.rb  reader.rb  repl.rb  special_forms.rb  stdlib.lisp  string.rb
ruby/spec/jambda/: core_spec.rb
rust/: Cargo.toml  LICENSE  README.md
rust/src/: main.rs
rust/src/jambda/: core.rs  evaluator.rs  mod.rs  printer.rs  repl.rs  types.rs
rust/src/jambda/reader/: lexer.rs  mod.rs  parser.rs
spec/: jambda_spec.rb  spec_helper.rb
spec/jambda/: core_spec.rb  fns_spec.rb  reader_spec.rb  stdlib_spec.rb
