name:                jambda
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/amarshall/jambda/tree/haskell#readme
license-file:        LICENSE
author:              J. Andrew Marshall
copyright:           2018 J. Andrew Marshall
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs: src
  ghc-options: -Wall
  exposed-modules:
    Jambda.Evaluator
    Jambda.Reader
    Jambda.Types
  build-depends:
    base >= 4.7 && < 5,
    bifunctors >= 5.5 && < 6,
    flow >= 1.0 && < 2,
    megaparsec >= 6.4 && < 7,
    unordered-containers

executable jambda
  hs-source-dirs: app
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    ansi-terminal,
    base >= 4.7 && < 5,
    jambda,
    haskeline >= 0.7 && < 0.8,
    unix >= 2.7 && < 3
